fix: email auth
